ajout du bouton retour en haut

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22546,10 +22546,13 @@ header .secHeader #video-toggle {
   background-size: cover;
   margin-top: -220px;
   border: solid 3px rgb(61, 65, 68);
-  transition: transform 0.3s ease;
+  transition: transform 0.7s ease;
 }
 .section1 .GrandeDiv1 .section1Img:hover {
   transform: scale(1.1);
+}
+.section1 .GrandeDiv1 .section1Img:hover .corner-border, .section1 .GrandeDiv1 .section1Img:hover .corner-border1 {
+  transform: scale(1.2);
 }
 .section1 .GrandeDiv1 .section1Img .corner-border {
   border-top: solid 5px rgb(205, 164, 93);
@@ -22558,10 +22561,11 @@ header .secHeader #video-toggle {
   width: 10%;
   height: 13%;
   border-left: solid 5px rgb(205, 164, 93);
+  transition: transform 0.7s ease;
 }
 .section1 .GrandeDiv1 .section1Img .corner-border1 {
   position: relative;
-  top: 285px;
+  top: 295px;
   left: 575px;
   border-bottom: solid 5px rgb(205, 164, 93);
   margin-bottom: 30px !important;
@@ -22569,6 +22573,7 @@ header .secHeader #video-toggle {
   width: 10%;
   height: 13%;
   border-right: solid 5px rgb(205, 164, 93);
+  transition: transform 0.7s ease;
 }
 
 .section2 {
@@ -22833,6 +22838,9 @@ header .secHeader #video-toggle {
   font-size: 20px;
   color: white;
 }
+.section5 #FormReserv #booking-form #btnForm:hover {
+  background-color: rgba(205, 164, 93, 0);
+}
 
 .section6 {
   height: auto;
@@ -22873,7 +22881,7 @@ header .secHeader #video-toggle {
   transition: transform 0.3s ease;
 }
 .section6 #divImg #div1Img #imgGallery:hover {
-  transform: scale(1.03) !important;
+  transform: scale(1.025) !important;
 }
 .section6 #divImg #div2Img {
   height: 50%;
@@ -22885,7 +22893,7 @@ header .secHeader #video-toggle {
   transition: transform 0.3s ease;
 }
 .section6 #divImg #div2Img #imgGallery:hover {
-  transform: scale(1.03) !important;
+  transform: scale(1.025) !important;
 }
 
 .section7 {
@@ -23117,6 +23125,9 @@ header .secHeader #video-toggle {
   margin-left: 40%;
   margin-top: 2.5%;
 }
+.section8 .divGoogleMap .contact-form #buttonForm:hover {
+  background-color: rgba(205, 164, 93, 0);
+}
 
 #hrAvantFooter {
   color: white;
@@ -23178,6 +23189,9 @@ header .secHeader #video-toggle {
   line-height: 47.5px;
   color: white;
 }
+.section9 #lien2 li:hover {
+  color: rgb(162, 129, 7);
+}
 .section9 #lien2 li .fa-solid {
   color: rgb(162, 129, 74);
 }
@@ -23199,6 +23213,9 @@ header .secHeader #video-toggle {
   list-style: none;
   line-height: 47.5px;
   color: white;
+}
+.section9 #lien3 li:hover {
+  color: rgb(162, 129, 74);
 }
 .section9 #lien3 li .fa-solid {
   color: rgb(162, 129, 74);
@@ -23259,6 +23276,19 @@ footer p {
   justify-content: center;
   color: white;
   padding-top: 2%;
+}
+
+header:hover #home {
+  color: rgb(205, 164, 93);
+}
+
+#arrow {
+  position: absolute;
+  color: rgb(205, 164, 93);
+  border-radius: 50%;
+  border: 0.5px solid rgb(205, 164, 93);
+  transform: translateX(1850px) translateY(-50px);
+  padding: 7.5px;
 }
 
 /*# sourceMappingURL=style.css.map */
