fin du carousel

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -4,6 +4,9 @@
 
 @use './partials/_mixins' as *
 
-@use '../../node_modules/bootstrap/scss/bootstrap.scss'
+@use '../../node_modules/bootstrap/scss/bootstrap.scss'with (
+    $primary: $primar
+    
+)
 
 @use './partials/_style'
