ajout section menu

--- a/src/sass/partials/_variables.sass
+++ b/src/sass/partials/_variables.sass
@@ -1,2 +1,7 @@
 $gris:rgb(59, 55, 45)
 $primar: white
+$dark-bg: rgb(26, 24, 20)
+$gold-color: rgb(205, 164, 93)
+$text-gray: rgb(141, 140, 140)
+$border-gray: rgb(172, 162, 162)
+$text-white: #fff
