--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -22511,18 +22511,12 @@ header .secHeader #video-toggle {
 .section1 .GrandeDiv1 .section1Text #pItalicsec1 {
   font-style: italic;
 }
-.section1 .GrandeDiv1 .section1Text #p1sec1 {
-  margin-left: -35px;
-}
 .section1 .GrandeDiv1 .section1Text #p1sec1 .fa-check {
   color: rgb(229, 184, 105);
   border: solid 1px rgb(229, 184, 105);
   border-radius: 50%;
   font-size: 14px;
   padding: 5px;
-}
-.section1 .GrandeDiv1 .section1Text #p2sec1 {
-  margin-left: -60px;
 }
 .section1 .GrandeDiv1 .section1Text #p2sec1 .fa-check {
   color: rgb(229, 184, 105);
@@ -22539,7 +22533,6 @@ header .secHeader #video-toggle {
   padding: 5px;
 }
 .section1 .GrandeDiv1 .section1Img {
-  margin-left: 100px;
   width: 35%;
   height: 50vh;
   background-image: url("../assets/img/about.jpg");
@@ -22564,9 +22557,11 @@ header .secHeader #video-toggle {
   transition: transform 0.7s ease;
 }
 .section1 .GrandeDiv1 .section1Img .corner-border1 {
-  position: relative;
-  top: 295px;
-  left: 575px;
+  display: flex;
+  justify-self: end;
+  align-items: flex-end;
+  position: static;
+  margin-top: 44%;
   border-bottom: solid 5px rgb(205, 164, 93);
   margin-bottom: 30px !important;
   margin-right: 30px !important;
@@ -22661,28 +22656,159 @@ header .secHeader #video-toggle {
 }
 
 .section3 {
-  height: 900px;
+  height: auto;
   background-color: rgb(26, 24, 20);
   padding-left: 6%;
   padding-right: 6%;
+  padding-bottom: 50px;
+  color: #fff;
 }
-.section3 .div1Section3 {
-  height: 25%;
+.section3 .div0Section3 {
   display: flex;
+  flex-direction: column;
+}
+.section3 .div0Section3 .div1Section3 {
   gap: 2%;
   padding-top: 3%;
+  display: flex;
 }
-.section3 .div1Section3 .texteSection3 {
+.section3 .div0Section3 .div1Section3 .texteSection3 {
   color: rgb(141, 140, 140);
-  display: inline;
   font-size: 25px;
+  display: inline;
 }
-.section3 .div1Section3 hr {
+.section3 .div0Section3 .div1Section3 hr {
   color: rgb(172, 162, 162);
   width: 7.5%;
   opacity: 60%;
 }
+.section3 .div0Section3 .TitreSection3 {
+  color: rgb(205, 164, 93) !important;
+  font-size: 55px !important;
+  margin-bottom: 5%;
+}
+.section3 .LeMenu {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+  border: none;
+}
+.section3 .LeMenu .filter-container {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.section3 .LeMenu .filter-container .filter-radio {
+  display: none;
+}
+.section3 .LeMenu .filter-container .filter-radio:checked + .filter-label {
+  background-color: rgb(205, 164, 93);
+  color: rgb(26, 24, 20);
+}
+.section3 .LeMenu .filter-container .filter-label {
+  color: white;
+  border: none;
+  background: transparent;
+  padding: 8px 20px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.section3 .LeMenu .filter-container .filter-label:hover {
+  background-color: rgba(205, 164, 93, 0.2);
+}
+.section3 .menu-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 30px;
+}
+.section3 .menu-container .menu-item {
+  width: calc(50% - 15px);
+  margin-bottom: 30px;
+  transition: all 0.3s ease;
+}
+.section3 .menu-container .menu-item .menu-item-content {
+  display: flex;
+  align-items: center;
+}
+.section3 .menu-container .menu-item .menu-item-content .menu-item-img {
+  flex: 0 0 70px;
+  height: 70px;
+  margin-right: 20px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 5px solid rgba(255, 255, 255, 0.1);
+}
+.section3 .menu-container .menu-item .menu-item-content .menu-item-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.section3 .menu-container .menu-item .menu-item-content .menu-item-info {
+  flex-grow: 1;
+}
+.section3 .menu-container .menu-item .menu-item-content .menu-item-info .menu-item-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.section3 .menu-container .menu-item .menu-item-content .menu-item-info .menu-item-header h4 {
+  font-size: 18px;
+  font-weight: 500;
+  color: white;
+  margin-bottom: 5px;
+}
+.section3 .menu-container .menu-item .menu-item-content .menu-item-info .menu-item-header .price {
+  font-size: 18px;
+  font-weight: 700;
+  color: rgb(205, 164, 93);
+}
+.section3 .menu-container .menu-item .menu-item-content .menu-item-info .description {
+  font-style: italic;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.7);
+}
 
+#all:checked ~ .menu-container .menu-item {
+  display: block;
+}
+
+#starters:checked ~ .menu-container .menu-item {
+  display: none;
+}
+#starters:checked ~ .menu-container .menu-item.starters {
+  display: block;
+}
+
+#salads:checked ~ .menu-container .menu-item {
+  display: none;
+}
+#salads:checked ~ .menu-container .menu-item.salads {
+  display: block;
+}
+
+#specialty:checked ~ .menu-container .menu-item {
+  display: none;
+}
+#specialty:checked ~ .menu-container .menu-item.specialty {
+  display: block;
+}
+
+input {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .section3 .menu-container .menu-item {
+    width: 100%;
+  }
+  .section3 .filter-container {
+    flex-wrap: wrap;
+  }
+  .section3 .filter-container .filter-label {
+    margin-bottom: 8px;
+  }
+}
 .section4 {
   position: relative;
   height: 1000px;
@@ -22745,6 +22871,23 @@ header .secHeader #video-toggle {
 }
 .section4 #carouselExampleAutoplaying .custom-dots-container .custom-dot:hover {
   background-color: white;
+}
+.section4 #carouselExampleAutoplaying .card-title {
+  color: rgb(199, 159, 91);
+  font-size: 32.5px;
+  margin-bottom: 2%;
+}
+.section4 #carouselExampleAutoplaying .card-price {
+  border-bottom: 2px solid;
+  border-color: rgb(199, 159, 91);
+  width: 7.5%;
+  font-size: 30px;
+}
+.section4 #carouselExampleAutoplaying .card-text {
+  font-size: 25px;
+}
+.section4 #carouselExampleAutoplaying .fs {
+  font-size: 17.5px;
 }
 
 .section5 {
@@ -22960,17 +23103,17 @@ header .secHeader #video-toggle {
   background-size: cover;
   background-position: center;
 }
-.section7 .ImgSection7 #img3S7 #textS7 {
+.section7 .ImgSection7 #textS7 {
   opacity: 0;
+  padding-top: 64%;
 }
-.section7 .ImgSection7 #img3S7 #textS7:hover {
+.section7 .ImgSection7 #textS7:hover {
   opacity: 1;
   background: linear-gradient(to top, black 0%, rgba(255, 255, 255, 0.432) 100%);
 }
 .section7 .ImgSection7 #textChef1, .section7 .ImgSection7 #textChef2, .section7 .ImgSection7 #textChef3 {
-  position: relative;
-  padding-top: 75%;
-  padding-bottom: -100px;
+  display: flex;
+  flex-direction: column;
   color: white;
 }
 .section7 .ImgSection7 #logo {
