--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -150,7 +150,6 @@ header
       #pItalicsec1
         font-style: italic
       #p1sec1
-        margin-left: -35px
         .fa-check
           color: rgb(229, 184, 105)
           border: solid 1px rgb(229, 184, 105) 
@@ -158,7 +157,6 @@ header
           font-size: 14px
           padding: 5px 
       #p2sec1
-        margin-left: -60px
         .fa-check
           color: rgb(229, 184, 105)
           border: solid 1px rgb(229, 184, 105) 
@@ -173,7 +171,6 @@ header
           font-size: 14px
           padding: 5px    
     .section1Img
-      margin-left: 100px
       width: 35%
       height: 50vh
       background-image: url('../assets/img/about.jpg')
@@ -195,9 +192,11 @@ header
         border-left: solid 5px rgb(205, 164, 93)
         transition: transform 0.7s ease
       .corner-border1
-        position: relative
-        top: 295px
-        left: 575px
+        display: flex
+        justify-self: end
+        align-items: flex-end
+        position: static
+        margin-top: 44% 
         border-bottom: solid 5px rgb(205, 164, 93)
         margin-bottom: 30px !important
         margin-right: 30px !important
@@ -277,23 +276,156 @@ header
       font-weight: 100
               
 .section3
-  height: 900px
-  background-color: rgb(26, 24, 20)
+  height: auto
+  background-color: $dark-bg
   padding-left: 6%
   padding-right: 6%
-  .div1Section3
-    height: 25%
+  padding-bottom: 50px
+  color: $text-white
+  
+  .div0Section3
     display: flex
-    gap: 2%
-    padding-top: 3%
-    .texteSection3
-      color: rgb(141, 140, 140)
-      display: inline
-      font-size: 25px
-    hr
-      color: rgb(172, 162, 162)
-      width: 7.5%
-      opacity: 60%
+    flex-direction: column
+    
+    .div1Section3
+      gap: 2%
+      padding-top: 3%
+      display: flex
+      
+      .texteSection3
+        color: $text-gray
+        font-size: 25px
+        display: inline
+      
+      hr
+        color: $border-gray
+        width: 7.5%
+        opacity: 60%
+    
+    .TitreSection3
+      color: $gold-color !important
+      font-size: 55px !important
+      margin-bottom: 5%
+  
+  .LeMenu
+    display: flex
+    justify-content: center
+    margin-bottom: 40px
+    border: none
+    
+    .filter-container
+      display: flex
+      justify-content: center
+      gap: 10px
+      
+      // Style pour les inputs radio cachés et leurs labels
+      .filter-radio
+        display: none
+        &:checked + .filter-label
+          background-color: $gold-color
+          color: $dark-bg
+      
+      .filter-label
+        color: white
+        border: none
+        background: transparent
+        padding: 8px 20px
+        cursor: pointer
+        transition: all 0.3s
+        
+        &:hover
+          background-color: rgba(205, 164, 93, 0.2)
+  
+  // Conteneur des éléments du menu
+  .menu-container
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
+    gap: 30px
+    
+    // Style pour chaque élément du menu
+    .menu-item
+      width: calc(50% - 15px)
+      margin-bottom: 30px
+      transition: all 0.3s ease
+      
+      .menu-item-content
+        display: flex
+        align-items: center
+        
+        .menu-item-img
+          flex: 0 0 70px
+          height: 70px
+          margin-right: 20px
+          border-radius: 50%
+          overflow: hidden
+          border: 5px solid rgba(255, 255, 255, 0.1)
+          
+          img
+            width: 100%
+            height: 100%
+            object-fit: cover
+        
+        .menu-item-info
+          flex-grow: 1
+          
+          .menu-item-header
+            display: flex
+            justify-content: space-between
+            align-items: center
+            
+            h4
+              font-size: 18px
+              font-weight: 500
+              color: white
+              margin-bottom: 5px
+            
+            .price
+              font-size: 18px
+              font-weight: 700
+              color: $gold-color
+          
+          .description
+            font-style: italic
+            font-size: 16px
+            color: rgba(255, 255, 255, 0.7)
+
+#all:checked ~ .menu-container .menu-item
+  display: block
+
+
+#starters:checked ~ .menu-container .menu-item
+  display: none
+  &.starters
+    display: block
+
+
+#salads:checked ~ .menu-container .menu-item
+  display: none
+  &.salads
+    display: block
+
+
+#specialty:checked ~ .menu-container .menu-item
+  display: none
+  &.specialty
+    display: block
+
+input
+  display: none
+
+
+@media (max-width: 768px)
+  .section3
+    .menu-container
+      .menu-item
+        width: 100%
+    
+    .filter-container
+      flex-wrap: wrap
+      .filter-label
+        margin-bottom: 8px
+    
 
 .section4
   position: relative
@@ -346,6 +478,19 @@ header
         border: 1px solid white
         &:hover
           background-color: white
+    .card-title
+      color: rgb(199, 159, 91)
+      font-size: 32.5px
+      margin-bottom: 2%
+    .card-price
+      border-bottom: 2px solid
+      border-color: rgb(199, 159, 91)
+      width: 7.5%
+      font-size: 30px
+    .card-text
+      font-size: 25px
+    .fs
+      font-size: 17.5px
 
 .section5
   height: auto
@@ -521,15 +666,15 @@ header
       height: 400px
       background-size: cover
       background-position: center
-      #textS7
+    #textS7
         opacity: 0
+        padding-top: 64%
         &:hover
           opacity: 1
           background: linear-gradient(to top, black 0%, rgba(255, 255, 255, 0.432) 100%)
     #textChef1, #textChef2, #textChef3
-      position: relative
-      padding-top: 75%
-      padding-bottom: -100px
+      display: flex
+      flex-direction: column
       color: white
     #logo
       display: flex
@@ -776,3 +921,4 @@ header:hover #home
   padding: 7.5px
 
 
+// PASSAGE AU MODE 
