--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -23421,4 +23421,140 @@ header:hover #home {
   padding: 7.5px;
 }
 
+@media (min-width: 768px) and (max-width: 1023px) {
+  body {
+    margin-top: 10px;
+  }
+  .navbar {
+    background-color: rgba(33, 37, 41, 0.5) !important;
+  }
+  .navbar .navbar-brand, .navbar .navbarText a, .navbar .navbarText1 {
+    opacity: 1 !important;
+    color: #ffffff !important;
+    text-decoration: none;
+  }
+  .navbar .navbarText {
+    display: inline-flex;
+    gap: 10%;
+    margin-left: -20%;
+  }
+  .navbar .navbarText1 {
+    border-radius: 50px;
+    padding: 8px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background: none;
+    border: 1px orange solid;
+  }
+  .navbar .navbarText1:hover {
+    background-color: rgb(205, 164, 93);
+  }
+  .navbar .navbar-brand {
+    font-size: 30px;
+  }
+  .section1 {
+    position: relative;
+    height: auto;
+    background-image: url(../assets/img/about-bg.jpg);
+    background-attachment: fixed;
+  }
+  .section1::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.61);
+    z-index: 0;
+  }
+  .section1 .GrandeDiv1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    position: relative;
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+  .section1 .GrandeDiv1 .section1Text {
+    width: 50%;
+    height: auto;
+    letter-spacing: 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 6%;
+    padding-right: 0;
+    margin-left: -10%;
+  }
+  .section1 .GrandeDiv1 .section1Text h2 {
+    color: white;
+    font-size: 35px;
+  }
+  .section1 .GrandeDiv1 .section1Text p {
+    color: white;
+    font-size: 25px;
+  }
+  .section1 .GrandeDiv1 .section1Text #pItalicsec1 {
+    font-style: italic;
+  }
+  .section1 .GrandeDiv1 .section1Text #p1sec1 .fa-check {
+    color: rgb(229, 184, 105);
+    border: solid 1px rgb(229, 184, 105);
+    border-radius: 50%;
+    font-size: 14px;
+    padding: 5px;
+  }
+  .section1 .GrandeDiv1 .section1Text #p2sec1 .fa-check {
+    color: rgb(229, 184, 105);
+    border: solid 1px rgb(229, 184, 105);
+    border-radius: 50%;
+    font-size: 14px;
+    padding: 5px;
+  }
+  .section1 .GrandeDiv1 .section1Text #p3sec1 .fa-check {
+    color: rgb(229, 184, 105);
+    border: solid 1px rgb(229, 184, 105);
+    border-radius: 50%;
+    font-size: 14px;
+    padding: 5px;
+  }
+  .section1 .GrandeDiv1 .section1Img {
+    width: 35%;
+    height: 50vh;
+    background-image: url("../assets/img/about.jpg");
+    background-size: cover;
+    margin-top: -220px;
+    border: solid 3px rgb(61, 65, 68);
+    transition: transform 0.7s ease;
+  }
+  .section1 .GrandeDiv1 .section1Img:hover {
+    transform: scale(1.1);
+  }
+  .section1 .GrandeDiv1 .section1Img:hover .corner-border, .section1 .GrandeDiv1 .section1Img:hover .corner-border1 {
+    transform: scale(1.2);
+  }
+  .section1 .GrandeDiv1 .section1Img .corner-border {
+    border-top: solid 5px rgb(205, 164, 93);
+    margin-top: 3%;
+    margin-left: 3%;
+    width: 10%;
+    height: 13%;
+    border-left: solid 5px rgb(205, 164, 93);
+    transition: transform 0.7s ease;
+  }
+  .section1 .GrandeDiv1 .section1Img .corner-border1 {
+    display: flex;
+    margin-top: 88%;
+    border-bottom: solid 5px rgb(205, 164, 93);
+    margin-right: 18px !important;
+    width: 10%;
+    height: 13%;
+    border-right: solid 5px rgb(205, 164, 93);
+    transition: transform 0.7s ease;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
