--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -20,6 +20,8 @@ body
       background-color: rgb(205, 164, 93)
   .navbar-brand
     font-size: 30px
+    
+      
 header
   position: relative
   height: auto
@@ -921,4 +923,110 @@ header:hover #home
   padding: 7.5px
 
 
-// PASSAGE AU MODE 
+@media (min-width: 768px) and (max-width: 1023px)
+  body
+    margin-top: 10px
+  .navbar
+    background-color: rgba(33, 37, 41, 0.5) !important
+    .navbar-brand, .navbarText a, .navbarText1
+      opacity: 1 !important
+      color: #ffffff !important
+      text-decoration: none
+    .navbarText
+      display: inline-flex
+      gap: 10%
+      margin-left: -20%
+    .navbarText1
+      @include boutonheader
+      &:hover
+        background-color: rgb(205, 164, 93)
+    .navbar-brand
+      font-size: 30px
+  .section1
+    position: relative
+    height: auto
+    background-image: url(../assets/img/about-bg.jpg)
+    background-attachment: fixed
+    &::before
+      content: ''
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      background-color: rgba(0, 0, 0, 0.61)
+      z-index: 0
+    .GrandeDiv1
+      @include flex
+      z-index: 1
+      position: relative
+      padding-top: 5%
+      padding-bottom: 5%
+      .section1Text
+        width: 50%
+        height: auto
+        letter-spacing: 1px
+        @include flex
+        flex-direction: column
+        padding-left: 6%
+        padding-right: 0
+        margin-left: -10%
+        h2
+          color: white  
+          font-size: 35px
+        p
+          color: white
+          font-size: 25px
+        #pItalicsec1
+          font-style: italic
+        #p1sec1
+          .fa-check
+            color: rgb(229, 184, 105)
+            border: solid 1px rgb(229, 184, 105) 
+            border-radius: 50% 
+            font-size: 14px
+            padding: 5px 
+        #p2sec1
+          .fa-check
+            color: rgb(229, 184, 105)
+            border: solid 1px rgb(229, 184, 105) 
+            border-radius: 50% 
+            font-size: 14px
+            padding: 5px 
+        #p3sec1
+          .fa-check
+            color: rgb(229, 184, 105)
+            border: solid 1px rgb(229, 184, 105) 
+            border-radius: 50% 
+            font-size: 14px
+            padding: 5px    
+      .section1Img
+        width: 35%
+        height: 50vh
+        background-image: url('../assets/img/about.jpg')
+        background-size: cover
+        margin-top: -220px
+        border: solid 3px rgb(61, 65, 68)
+        transition: transform 0.7s ease
+        &:hover
+          transform: scale(1.1)
+          .corner-border, .corner-border1
+            &:hover
+            transform: scale(1.2)
+        .corner-border
+          border-top: solid 5px rgb(205, 164, 93)
+          margin-top: 3%
+          margin-left: 3%
+          width: 10%
+          height: 13%
+          border-left: solid 5px rgb(205, 164, 93)
+          transition: transform 0.7s ease
+        .corner-border1
+          display: flex
+          margin-top: 88% 
+          border-bottom: solid 5px rgb(205, 164, 93)
+          margin-right: 18px !important
+          width: 10%
+          height: 13%
+          border-right: solid 5px rgb(205, 164, 93)
+          transition: transform 0.7s ease
