--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -283,7 +283,7 @@ header
   padding-left: 6%
   padding-right: 6%
   padding-bottom: 50px
-  color: $text-white
+  color: white
   
   .div0Section3
     display: flex
@@ -516,7 +516,7 @@ input
         color: white
         width: 7.5%
         opacity: 25%
-    #p2Reservation
+  #p2Reservation
       color: rgb(205, 164, 93) !important
       font-size: 60px !important
       margin-bottom: 5%
@@ -911,9 +911,6 @@ footer
     color: white
     padding-top: 2%
     
-header:hover #home
-  color: rgb(205, 164, 93)
-
 #arrow
   position: absolute
   color: rgb(205, 164, 93)
