--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -23394,6 +23394,7 @@ input {
   font-weight: 600;
   transition: background-color 0.3s;
   border: none;
+  margin-left: 225px;
 }
 
 footer {
@@ -23419,7 +23420,7 @@ footer p {
 
 @media (min-width: 768px) and (max-width: 1023px) {
   body {
-    margin-top: 10px;
+    margin-top: 0;
   }
   .navbar {
     background-color: rgba(33, 37, 41, 0.5) !important;
@@ -23472,6 +23473,7 @@ footer p {
     position: relative;
     padding-top: 5%;
     padding-bottom: 5%;
+    flex-direction: column;
   }
   .section1 .GrandeDiv1 .section1Text {
     width: 50%;
@@ -23495,6 +23497,10 @@ footer p {
   }
   .section1 .GrandeDiv1 .section1Text #pItalicsec1 {
     font-style: italic;
+    font-size: 18px;
+  }
+  .section1 .GrandeDiv1 .section1Text #p1sec1 {
+    font-size: 15px;
   }
   .section1 .GrandeDiv1 .section1Text #p1sec1 .fa-check {
     color: rgb(229, 184, 105);
@@ -23503,12 +23509,18 @@ footer p {
     font-size: 14px;
     padding: 5px;
   }
+  .section1 .GrandeDiv1 .section1Text #p2sec1 {
+    font-size: 15px;
+  }
   .section1 .GrandeDiv1 .section1Text #p2sec1 .fa-check {
     color: rgb(229, 184, 105);
     border: solid 1px rgb(229, 184, 105);
     border-radius: 50%;
     font-size: 14px;
     padding: 5px;
+  }
+  .section1 .GrandeDiv1 .section1Text #p3sec1 {
+    font-size: 15px;
   }
   .section1 .GrandeDiv1 .section1Text #p3sec1 .fa-check {
     color: rgb(229, 184, 105);
@@ -23517,12 +23529,15 @@ footer p {
     font-size: 14px;
     padding: 5px;
   }
+  .section1 .GrandeDiv1 .section1Text #p4sec1 {
+    font-size: 15px;
+  }
   .section1 .GrandeDiv1 .section1Img {
     width: 35%;
-    height: 50vh;
+    height: 30vh;
     background-image: url("../assets/img/about.jpg");
     background-size: cover;
-    margin-top: -220px;
+    margin-top: 0;
     border: solid 3px rgb(61, 65, 68);
     transition: transform 0.7s ease;
   }
@@ -23543,13 +23558,104 @@ footer p {
   }
   .section1 .GrandeDiv1 .section1Img .corner-border1 {
     display: flex;
-    margin-top: 88%;
+    margin-top: 48%;
     border-bottom: solid 5px rgb(205, 164, 93);
     margin-right: 18px !important;
     width: 10%;
     height: 13%;
     border-right: solid 5px rgb(205, 164, 93);
     transition: transform 0.7s ease;
+  }
+  .section2 {
+    background-color: rgb(13, 11, 9);
+    height: auto;
+    padding-left: 6%;
+    padding-right: 6%;
+  }
+  .section2 .section2Titre {
+    height: 25%;
+    display: flex;
+    gap: 2%;
+    padding-top: 2%;
+  }
+  .section2 .section2Titre .texteSection2 {
+    color: rgb(141, 140, 140);
+    font-size: 25px;
+  }
+  .section2 hr {
+    color: rgb(172, 162, 162);
+    width: 7.5%;
+    opacity: 60%;
+  }
+  .titreSection2 {
+    font-size: 30px;
+    color: rgb(205, 164, 93);
+    margin-bottom: 60px;
+  }
+  #CarteSection2 {
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    padding-bottom: 5%;
+    flex-direction: column;
+  }
+  #CarteSection2 #carte1Section2 {
+    width: 90% !important;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    background-color: rgb(26, 24, 20);
+  }
+  #CarteSection2 #carte2Section2 {
+    margin-top: 5%;
+    width: 90% !important;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    background-color: rgb(26, 24, 20);
+  }
+  #CarteSection2 #carte3Section2 {
+    margin-top: 5%;
+    width: 90% !important;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    background-color: rgb(26, 24, 20);
+  }
+  #CarteSection2 #carte1Section2:hover, #CarteSection2 #carte2Section2:hover, #CarteSection2 #carte3Section2:hover {
+    background-color: rgb(205, 164, 93);
+  }
+  #CarteSection2 #p1Section2 {
+    font-size: 38px;
+    color: rgb(205, 164, 93);
+    text-align: start;
+  }
+  #CarteSection2 #p1Section2:hover {
+    color: white;
+  }
+  #CarteSection2 #p2Section2 {
+    font-size: 34.5px;
+    color: white;
+  }
+  #CarteSection2 #p3Section2 {
+    color: white;
+    font-size: 26.5px;
+    font-weight: 100;
+  }
+  .menu-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 30px;
   }
 }
 
