--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -320,7 +320,6 @@ header
       justify-content: center
       gap: 10px
       
-      // Style pour les inputs radio cachés et leurs labels
       .filter-radio
         display: none
         &:checked + .filter-label
@@ -338,7 +337,6 @@ header
         &:hover
           background-color: rgba(205, 164, 93, 0.2)
   
-  // Conteneur des éléments du menu
   .menu-container
     display: flex
     flex-wrap: wrap
@@ -901,6 +899,7 @@ input
             font-weight: 600
             transition: background-color 0.3s
             border: none
+            margin-left: 225px
 
 
 footer
@@ -922,7 +921,7 @@ footer
 
 @media (min-width: 768px) and (max-width: 1023px)
   body
-    margin-top: 10px
+    margin-top: 0
   .navbar
     background-color: rgba(33, 37, 41, 0.5) !important
     .navbar-brand, .navbarText a, .navbarText1
@@ -959,6 +958,7 @@ footer
       position: relative
       padding-top: 5%
       padding-bottom: 5%
+      flex-direction: column
       .section1Text
         width: 50%
         height: auto
@@ -976,7 +976,9 @@ footer
           font-size: 25px
         #pItalicsec1
           font-style: italic
+          font-size: 18px
         #p1sec1
+          font-size: 15px
           .fa-check
             color: rgb(229, 184, 105)
             border: solid 1px rgb(229, 184, 105) 
@@ -984,6 +986,7 @@ footer
             font-size: 14px
             padding: 5px 
         #p2sec1
+          font-size: 15px
           .fa-check
             color: rgb(229, 184, 105)
             border: solid 1px rgb(229, 184, 105) 
@@ -991,18 +994,21 @@ footer
             font-size: 14px
             padding: 5px 
         #p3sec1
+          font-size: 15px
           .fa-check
             color: rgb(229, 184, 105)
             border: solid 1px rgb(229, 184, 105) 
             border-radius: 50% 
             font-size: 14px
-            padding: 5px    
+            padding: 5px 
+        #p4sec1
+          font-size: 15px   
       .section1Img
         width: 35%
-        height: 50vh
+        height: 30vh
         background-image: url('../assets/img/about.jpg')
         background-size: cover
-        margin-top: -220px
+        margin-top: 0
         border: solid 3px rgb(61, 65, 68)
         transition: transform 0.7s ease
         &:hover
@@ -1020,10 +1026,87 @@ footer
           transition: transform 0.7s ease
         .corner-border1
           display: flex
-          margin-top: 88% 
+          margin-top: 48% 
           border-bottom: solid 5px rgb(205, 164, 93)
           margin-right: 18px !important
           width: 10%
           height: 13%
           border-right: solid 5px rgb(205, 164, 93)
           transition: transform 0.7s ease
+
+  .section2
+    background-color: rgb(13, 11, 9)
+    height: auto
+    padding-left: 6%
+    padding-right: 6%
+    .section2Titre
+      height: 25%
+      display: flex
+      gap: 2%
+      padding-top: 2%
+      .texteSection2
+        color: rgb(141, 140, 140)
+        font-size: 25px
+    hr
+      color: rgb(172, 162, 162)
+      width: 7.5%
+      opacity: 60%
+  .titreSection2
+    font-size: 30px
+    color: rgb(205, 164, 93)
+    margin-bottom: 60px
+  #CarteSection2
+    height: auto
+    display: flex
+    justify-content: space-between
+    margin-top: 10px
+    padding-bottom: 5%
+    flex-direction: column
+    #carte1Section2
+      width: 90% !important
+      height: 400px
+      display: flex
+      justify-content: center
+      flex-direction: column
+      padding-left: 2.5%
+      padding-right: 2.5%
+      background-color: rgb(26, 24, 20)
+    #carte2Section2
+      margin-top: 5%
+      width: 90% !important
+      height: 400px
+      display: flex
+      justify-content: center
+      flex-direction: column
+      padding-left: 2.5%
+      padding-right: 2.5%
+      background-color: rgb(26, 24, 20)
+    #carte3Section2
+      margin-top: 5%
+      width: 90% !important
+      height: 400px
+      display: flex
+      justify-content: center
+      padding-left: 2.5%
+      padding-right: 2.5%
+      background-color: rgb(26, 24, 20)
+    #carte1Section2:hover, #carte2Section2:hover, #carte3Section2:hover
+      background-color: rgb(205, 164, 93)
+    #p1Section2
+      font-size: 38px
+      color: rgb(205, 164, 93)
+      text-align: start
+    #p1Section2:hover
+      color: white
+    #p2Section2
+      font-size: 34.5px
+      color: white
+    #p3Section2
+      color: white
+      font-size: 26.5px
+      font-weight: 100
+  .menu-container
+      display: flex
+      flex-wrap: wrap
+      flex-direction: column
+      gap: 30px
