--- a/src/sass/partials/_style.sass
+++ b/src/sass/partials/_style.sass
@@ -459,12 +459,14 @@ input
       color: rgb(205, 164, 93)
       margin-left: 6%
       margin-top: -2%
-      font-size: 60px
+      font-size: 50px
       font-weight: 400
       margin-bottom: 5%
   #carouselExampleAutoplaying
     padding-left: 6%
     padding-right: 6%
+    flex-wrap: wrap
+    flex-direction: column
     #carouselTexte
       color: white
       margin-left: 5%
